<resources>
    <string name="app_name">Doğru Havadis Admin</string>
    <string name="login_title">Yönetici Girişi</string>
    <string name="login_subtitle">Yönetim paneline erişmek için\nbilgilerinizi girin</string>
    <string name="email_label">E-posta</string>
    <string name="email_hint">ornek@dogruhavadis.com</string>
    <string name="password_label">Şifre</string>
    <string name="password_hint">........</string>
    <string name="forgot_password">Şifremi Unuttum?</string>
    <string name="login_button">Giriş Yap</string>
    <string name="no_account">Hesabınız yok mu? </string>
    <string name="register_link">Kayıt Ol</string>
    <string name="register_title">Yeni Kayıt</string>
    <string name="register_subtitle">Yönetim paneline katılmak için\nformu doldurun</string>
    <string name="name_label">Ad Soyad</string>
    <string name="name_hint">Örn: Ali Korkut</string>
    <string name="job_title_label">Ünvan Seçiniz</string>
    <string name="job_title_hint">Ünvanınızı seçin</string>
    <string name="repassword_label">Şifre Tekrar</string>
    <string name="repassword_hint">........</string>
    <string name="register_button">Kayıt Ol</string>
    <string name="already_have_account">Zaten hesabınız var mı? </string>
    <string name="login_link">Giriş Yap</string>
    <string name="forgot_password_title">Şifremi Unuttum</string>
    <string name="forgot_password_subtitle">Şifrenizi sıfırlamak için kayıtlı\ne-posta adresinizi girin</string>
    <string name="reset_password_button">Sıfırlama Bağlantısı Gönder</string>
    <string name="back_to_login">Giriş Ekranına Dön</string>
    <string name="add_profile_title">Profilini Tamamla</string>
    <string name="add_profile_subtitle">Hesabını kişiselleştirmek için bir\nfotoğraf yükle ve kullanıcı adı\nbelirle</string>
    <string name="username_label">Kullanıcı Adı</string>
    <string name="username_hint">\@kullaniciadi</string>
    <string name="save_and_continue">Kaydet ve Devam Et</string>
    <string name="brand_name">Doğru Havadis</string>
    <string name="maintenance_title">Sistem Bakımda</string>
    <string name="maintenance_subtitle">Sizlere daha iyi bir deneyim sunabilmek için kısa süreli bir bakım çalışması yapıyoruz.</string>
    <string name="maintenance_finish_label">Tahmini Bitiş Süresi</string>
    <string name="maintenance_date">23 Temmuz 2026 - 18:00</string>
    <string name="update_title">Güncelleme Hazır</string>
    <string name="update_subtitle">Uygulamanın yeni bir sürümü mevcut. En iyi deneyim için lütfen güncelleyin.</string>
    <string name="update_version_label">Yeni Sürüm: v1.1.0</string>
    <string name="update_button">Şimdi Güncelle</string>
    <string name="site_status_title">Site Durumu</string>
    <string name="site_status_subtitle">İnternet Sitesi Bakım Modu Yönetimi</string>
    <string name="web_site_status_header">İnternet Sitesi Bakım Yönetimi</string>
    <string name="web_site_status_subtext">dogruhavadis.com web sitesinin yayın ve bakım durumunu anlık olarak yönetin.</string>
</resources>